Service Regression/.metadata/.plugins/com.provar.eclipse.ui/00DM0000001eO1fMAE/objects/SalesIQ__ApprovalLineItem__c.object
<CustomObject>
    <fields>
        <fullName>SalesIQ__Approval_Status__c</fullName>
        <label>Approval Status</label>
        <picklist>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SalesIQ__ApproverRole__c</fullName>
        <label>Approver Role</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SalesIQ__Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>ApprovalLineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SalesIQ__Notes__c</fullName>
        <label>Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SalesIQ__Request__c</fullName>
        <label>Request</label>
        <referenceTo>SalesIQ__Request__c</referenceTo>
        <relationshipName>ApprovalLineItems</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>SalesIQ__Status_Flag__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Status Flag</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SalesIQ__level__c</fullName>
        <label>level</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Approval Line Item</label>
    <listViews>
        <fullName>SalesIQ__All</fullName>
        <columns>SalesIQ__Request__c</columns>
        <columns>SalesIQ__Approver__c</columns>
        <columns>SalesIQ__Approval_Status__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>ALI-{00000000}</displayFormat>
        <label>Approval  Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Approval Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>